--- a/src/app/ProviderWall/ManageOrders/views/oz.providerwall.provider-view.tpl.html
+++ b/src/app/ProviderWall/ManageOrders/views/oz.providerwall.provider-view.tpl.html
@@ -25,8 +25,7 @@
       <div class="no-message">
         <center>
           <p style="font-size: 14px; font-weight:bold;">No branch exist for your seller account.</p>      
-          <p style="font-size: 12px;">Please add atleast one branch for this seller to start using OrderZapp</p>
-          <p style="font-size: 13px; font-weight:bold;" class="text-danger"><em><strong>Note:</strong></em> Please contact OrderZapp support team to activate your OrderZapp seller account.</p>
+          <p style="font-size: 13px; font-weight:bold;" class="text-danger"><em><strong>Note:</strong></em> Please add atleast one branch for this seller to start using OrderZapp.</p>
         </center>
       </div>
     </div>
