reject option remove from provider acceptance screen

--- a/src/app/OrderZapp/oz/views/oz.provider.acceptance.tpl.html
+++ b/src/app/OrderZapp/oz/views/oz.provider.acceptance.tpl.html
@@ -24,7 +24,7 @@
     <td ng-bind = "provider.status"></td>
     <td>
     				<button ng-click='accept(provider.providerid)'>Accept</button>
-    				<button ng-click='reject(provider.providerid)'> Reject </button>
+    				<!-- <button ng-click='reject(provider.providerid)'> Reject </button> -->
     </td>
     
 </tr>
