Feature : Change Category 60% done

--- a/src/app/ProviderWall/ManageProduct/views/oz.providerContent.manageProduct.tpl.html
+++ b/src/app/ProviderWall/ManageProduct/views/oz.providerContent.manageProduct.tpl.html
@@ -104,7 +104,7 @@
 			            </td>
 			          </tr>
 
-			          <tr ng-show="selectedBranchId && allCategories.length<1 && editMode.editStatus=='add'"> 
+			          <tr ng-show="selectedBranchId && allCategories.length<1 "> 
 			           <td colspan="4"  > 
 	           	   		  <div class="OZ-PolicyNotAddedMsg row" >
 						       <div class="col-md-12">
@@ -118,7 +118,7 @@
 			            </td>
 			          </tr>
 
-			    <tr ng-if="editMode.editStatus=='add'"> 
+			    <tr > 
 			          
 			            <td  style="width:33%" ng-show="selectedBranchId && allCategories.length>0">
 			              		<span class="bold">Level 2 Category  </span>
