--- a/src/app/ProviderWall/ManageOrders/views/oz.OrderContent.tpl.html
+++ b/src/app/ProviderWall/ManageOrders/views/oz.OrderContent.tpl.html
@@ -31,7 +31,7 @@
 <div class="headingDiv"> 
 <span class="bold">Delivery Info</span>
  <div  class="pull-right">
-        <span class="bold" ng-show="order.deliverydate"> Seller Accepted Delivery : </span> <span ng-show="order.deliverydate" class=" oz-contentsRight">{{ order.deliverydate  | date:'dd-MM-yyyy ' }}  In {{order.prefdeltimeslot.from}}  To {{order.prefdeltimeslot.to}}</span>
+        <span class="bold" ng-show="order.deliverydate"> Seller Accepted Delivery : </span> <span ng-show="order.deliverydate" class=" oz-contentsRight">{{ order.deliverydate | date:'dd-MM-yyyy '}}  In {{changeTimeSlotDisplayFormat(order.deliverytimeslot.from)}}  To {{changeTimeSlotDisplayFormat(order.deliverytimeslot.to)}}</span>
       </div> 
 
 
@@ -49,7 +49,9 @@
 
       <div  class=" col-md-7 ">
       <span class="pull-right">
-        <span class="bold">Customer Requested Delivery : </span> <span class=" oz-contentsRight">{{ order.preferred_delivery_date | date:'dd-MM-yyyy '}}  In {{order.deliverytimeslot.from}}  To {{order.deliverytimeslot.to}}</span>
+        <span class="bold">Customer Requested Delivery Time Slot: </span> <span class=" oz-contentsRight">
+            {{changeTimeSlotDisplayFormat(order.prefdeltimeslot.from)}}  To {{changeTimeSlotDisplayFormat(order.prefdeltimeslot.to)}}
+        </span>
         </span>
       </div>
      
