--- a/src/app/ProviderWall/ManageBranch/views/oz.seller.branch.manage.tpl.html
+++ b/src/app/ProviderWall/ManageBranch/views/oz.seller.branch.manage.tpl.html
@@ -429,7 +429,7 @@
 
 								  		<dd> <h6>To:</h6>
 												<input type = 'text' class = 'form-control' placeholder = 'HH' style = 'width : 15%' ng-model = 'edit.to.hours' required name = 'editOperationEndHs' ng-pattern="/^([01]?[0-9]|2[0-3])$/">
-							          <input type = 'text' class = 'form-control' placeholder = 'MM' style = 'width : 15%' ng-model = 'edit.to.minutes' required name = 'editOperationEndMs' ng-pattern="/^[0-9]|[0-5][0-9]$/" >
+							          <input type = 'text' class = 'form-control' placeholder = 'MM' style = 'width : 15%' ng-model = 'edit.to.minutes' required name = 'editOperationEndMs' ng-pattern="/^[0-5][0-9]$/" >
 							                    				                     
 							          <small style="color:red;display:inherit" ng-show="(((form.editBranchForm.editOperationEndHs.$dirty && form.editBranchForm.editOperationEndMs.$dirty) && (form.editBranchForm.editOperationEndHs.$invalid || form.addBranchForm.editOperationEndMs.$invalid)) || ((form.editBranchForm.editOperationEndHs.$invalid || form.editBranchForm.editOperationEndMs.$invalid) && form.editBranchForm.submitted))">*Please enter valid 'To' delivery hours and minutes [only numbers are allowed and hours should be in range [0-23]]</small>
 								  		</dd>
@@ -454,14 +454,14 @@
 							     			<div class="row">
 							     				<div class="col-md-2" style="font-size:12px;">From:&nbsp;</div>
 							     				<div class="col-md-5"><input type = 'text' class = 'form-control' placeholder = 'HH' ng-model = 'slot.from.hours' name = 'editfromtimeinhours' ng-pattern="/^([01]?[0-9]|2[0-3])$/" required></div>
-							     				<div class="col-md-5"><input type = 'text' class = 'form-control' placeholder = 'MM' ng-model = 'slot.from.minutes' name = 'editfromtimeinminutes' ng-pattern="/^[0-9]|[0-5][0-9]$/" required></div>
+							     				<div class="col-md-5"><input type = 'text' class = 'form-control' placeholder = 'MM' ng-model = 'slot.from.minutes' name = 'editfromtimeinminutes' ng-pattern="/^[0-5][0-9]$/" required></div>
 							     			</div>
 							     		</div>
 							     		<div class="col-md-5">
 							     			<div class="row">
 							     				<div class="col-md-2" style="font-size:12px;">To:</div>
 							     				<div class="col-md-5"><input type = 'text' class = 'form-control' placeholder = 'HH' ng-model = 'slot.to.hours' name = 'edittotimeinhours' ng-pattern="/^([01]?[0-9]|2[0-3])$/" required></div>
-							     				<div class="col-md-5"><input type = 'text' class = 'form-control' placeholder = 'MM' ng-model = 'slot.to.minutes' name = 'edittotimeinminutes' ng-pattern="/^[0-9]|[0-5][0-9]$/" required></div>
+							     				<div class="col-md-5"><input type = 'text' class = 'form-control' placeholder = 'MM' ng-model = 'slot.to.minutes' name = 'edittotimeinminutes' ng-pattern="/^[0-5][0-9]$/" required></div>
 							     			</div>
 							     		</div>
 							     		<div class="col-md-2">
